Style issues on firefox Ability to delete all archived

--- a/client/socialist.less
+++ b/client/socialist.less
@@ -16,7 +16,7 @@ body {
 button.done {
   position: absolute;
   right: -0.2em;
-  top: 1.2em;
+  top: 0.6em;
   -webkit-border-radius: 0 3px 3px 0;
   -moz-border-radius: 0 3px 3px 0;
   border-radius: 0 3px 3px 0;
@@ -52,12 +52,12 @@ td.item {
   vertical-align:middle;
 }
 
-td.itemEditing {
+div.itemEditing {
   position:relative;
   padding-right:42px;
 }
 
-td.itemEditing input {
+div.itemEditing input {
   margin-top: 0.65em;
   -webkit-border-radius: 3px 0 0 3px;
   -moz-border-radius: 3px 0 0 3px;
